# polytrade

./: .gitignore  ACCESS_DESIGN.md  CLAUDE.md  CONTEXT.md  PITCH_DECK_PROMPT.md
backend/: .env.example  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8b0e06aee5ff_initial_schema.py  a1b2c3d4e5f6_add_user_onboarding_columns.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: analyzer.py  consensus.py  executor.py  loop.py  position_manager.py  research_cache.py  researcher.py  scanner.py  scheduler.py  sizing.py  state.py
backend/app/api/: agent.py  approvals.py  audit.py  auth.py  chat.py  markets.py  news.py  policies.py  portfolio.py  router.py  strategies.py  trades.py  ws.py
backend/app/armoriq/: enforcement.py
backend/app/db/: engine.py
backend/app/db/models/: user.py  (+10 more)
backend/app/llm/: base.py  registry.py  tools.py
backend/app/nlp/: conversation.py  onboarding.py  parser.py
backend/app/schemas/: agent.py  chat.py  market.py  policy.py  portfolio.py  strategy.py  trade.py  user.py
backend/app/services/: market_service.py  news_service.py
backend/app/trading/: engine.py  pricing.py  settlement.py
backend/app/ws/: events.py  manager.py
backend/tests/: conftest.py  test_agent_state.py  test_analyzer.py  test_auth.py  test_consensus.py  test_news_service.py  test_nlp_conversation.py  test_nlp_onboarding.py  test_nlp_parser.py  test_position_manager.py  test_scanner.py  test_schemas.py  test_tools.py  test_ws_events.py  test_ws_manager.py
(+88 files in other folders)
